--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Tabla de Información</title>
+    <title>Menu Restaurante</title>
 </head>
 <body>
     <header>
-        <h1>Tabla de Información</h1>
+        <h1>Menu del dia </h1>
     </header>
 
     <main>
