etiqueta de botón"
 botón con un atribut id para borrar todo

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             </thead>
             <tbody></tbody>
         </table>
+        <button type="button" id="clear-btn">Borrar Todo</button>
+
     </main>
 
     <script src="js/scripts.js"></script>
