cambio de texto del boton
agregar a menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <label for="entity2">Precio Producto:</label>
             <input type="text" id="entity2" name="entity2" required>
             <br>
-            <button type="button" id="add-btn">Agregar a la tabla</button>
+            <button type="button" id="add-btn">Agregar al menu</button>
         </form>
 
         <table id="data-table">
