saltos de linea y correccion de nombres

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Menu Restaurante</title>
+    <title>Menú Restaurante</title>
 </head>
 <body>
     <header>
-        <h1>Menu del dia </h1>
+        <h1>Menú del dia </h1>
     </header>
 
     <main>
         <form id="data-form">
-            <label for="entity1">Nombre Producto:</label>
+            <label for="entity1">Nombre del Producto:</label>
             <input type="text" id="entity1" name="entity1" required>
             <br>
             <br>
-            <label for="entity2">Precio Producto: </label>
+            <label for="entity2">Precio del Producto:</label>
             <input type="text" id="entity2" name="entity2" required>
             <br>
             <br>
@@ -34,6 +34,7 @@
             </thead>
             <tbody></tbody>
         </table>
+        <br>
         <button type="button" id="clear-btn">Borrar Todo</button>
 
     </main>
